crates/eml_cli/tests/snapshots/ui__run_fail@files__missing_file_through_pipe.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- runtime error ---\\n{error}\\n\")"
input_file: tests/ui/run-fail/files/missing_file_through_pipe.em
---
--- stdout ---
--- runtime error ---
cannot open `missing.txt`: not found in `op$open`
